# reform

./: .gitignore  AGENTS.md  Cargo.toml  NOTES.md  check_stanza.py  check_stanza2.py  check_stanza3.py  check_stanza4.py  download_data.sh  download_stanza.py  inspect_models.py  perf_baseline.data  perf_orig.data  pixi.toml  train-tagger.sh  train.sh
demo/: cloak-of-darkness.rf  game.rf  game.txt  game1.rf  if-english.rf  if.rf  if.txt  lang.rf  langtest.rf  reverse.rf  rooms-and-going.rf  splat.rf  test-game.rf  test.rf  test.txt
demo/experiment/: english.txt  if.txt  prompt.txt
demo/iflib/: iflib.rf
docs/: CHR-guide.md  DESIGN-CONSTRAINTS.md  DESIGN.md  LANG.md  PERF-OLD.md  PERF.md  RESEARCH.md  the-cloak-of-darkness.md
examples/: 01-bootstrap.txt  02-multi-condition.txt  03-rulebook.txt  04-self-modifying.txt  06-checkpoint.txt  build-lemma-dict.rs  cloak-of-darkness.rf  demo-1.rf  demo-2.rf  demo-3.rf  demo-4.rf  dump-lemma-dict.rs  game.rf  infer_upos.rs  lang.rf  test.rf  train_upos.rs
examples/iflib/: actions.rf  conditions.rf  core.rf  lib.rf  noun-phrases.rf  prompt.rf
experiment/: english.txt  game.txt  if.txt  lib.txt  prompt.txt  test_action.rf  test_custom.rf
experiment/test/: playthrough.txt
legacy/: pixi.toml  test_stanza.py
legacy/src/: lib.rs
reform-cli/: Cargo.toml
reform-cli/src/: main.rs
reform-cli/tests/: cli.rs
reform-engine/: Cargo.toml  SPEC.md
src/: engine.rs  fact.rs  lemmatizer.rs  lib.rs  main.rs  parser.rs  repl.rs  rule.rs  tagger.rs
tests/: cases.rs  cli.rs  engine.rs  parser.rs  rule.rs  validate.rs
(+35 files in other folders)
