[workspace]
members = [".", "reform-engine"]

[package]
name = "reform"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[dependencies]
crfs = "0.4.1"
conllu = { package = "rs-conllu", version = "0.4.1" }
salsa = "0.27.2"
anyhow = "1.0.103"
rkyv = "0.8.17"
flate2 = "1.1.9"
yoke = { version = "0.8.3", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["deref"] }
clap = { version = "4.6.1", features = ["derive"] }
