[workspace]
members = ["reform-cli"]
default-members = ["reform-cli"]

[package]
name = "reform"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[dependencies]
anyhow = "1.0"
derive_more = { version = "2.1.1", features = ["deref"] }
internment = { version = "0.8.6", features = ["arc"], default-features = false }
peg = "0.8.6"
